Errores de conectividad solucionados en los microservicios

--- a/api-gateway/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/api-gateway/src/main/resources/application.yaml
@@ -22,8 +22,8 @@ spring:
           predicates:
             - Path=/producto/**
 
-        - id: OFERTA-SERVICE
-          uri: lb://OFERTA-SERVICE
+        - id: OFERTAS-SERVICE
+          uri: lb://OFERTAS-SERVICE
           predicates:
             - Path=/oferta/**
 
