--- a/oferta-service/pom.xml
+++ b/oferta-service/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.msvc.oferta</groupId>
 	<artifactId>ms-oferta-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>oferta-service</name>
+	<name>ofertas-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
